# SLA_Task

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  answers.md  docker-compose.yaml  main.py  pyproject.toml  sla_config.yaml
app/: config.py  database.py  dependencies.py  sla_config.yaml
app/api/: tickets.py
app/models/: __init__.py  ticket.py
app/schemas/: __init__.py  alert.py  ticket.py
app/services/: escalation_service.py  sla_engine.py  ticket_service.py
app/utils/: correlation_id.py  logging.py  sla_calculator.py
artifacts/: faiss.index  texts.json
documents/: posts.json
scripts/: init-db.sql
ticket_triage_service/: data_extraction.py  embeddings.py  grounding.py  rag_pipeline.py  retriever.py
